--- a/7 Ejercicio CSS selectores/style.css
+++ b/7 Ejercicio CSS selectores/style.css
@@ -4,4 +4,30 @@ ol {
   list-style-position: inside;
 }
 
-/* Write your CSS below, don't change the rules above. */
+
+/*1.-*/
+p {
+  color: red;
+}
+
+/*2.-*/
+.note {
+  font-size: 20px;
+}
+
+/*3.-*/
+#id-selector-demo {
+  color: green;
+}
+
+/*4.-*/
+
+li[value="4"] {
+  color: blue;
+}
+
+/*5.-*/
+
+* {
+  text-align: center;
+}
