--- a/11 Práctica CSS Grid/style.css
+++ b/11 Práctica CSS Grid/style.css
@@ -1,30 +1,14 @@
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr ; /*define el tamaño de las columnas*/
+  width:800px ;
+  height:800px ;
+  gap: 10px;
+  grid-template-rows: 1fr 1fr;
+  border: 10px solid crimson;
+  row-gap: 10px;
 }
-.one {
-  grid-column: 1 / 3;
-  grid-row: 1;
-}
-.two {
-  grid-column: 2 / 4;
-  grid-row: 1 / 3;
-}
-.three {
-  grid-column: 1;
-  grid-row: 2 / 5;
-}
-.four {
-  grid-column: 3;
-  grid-row: 3;
-}
-.five {
-  grid-column: 2;
-  grid-row: 4;
-}
-.six {
-  grid-column: 3;
-  grid-row: 4;
+
+.wrapper div{
+  border: 1px solid black
 }
